<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".android.activities.HomeActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_bottom_tab"
        android:clipChildren="false"
        android:gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_frag1"
            style="@style/home_radio_button"
            android:checked="true"
            android:drawableTop="@drawable/checker_home_radio_one"
            android:text="@string/home_radio_index" />

        <RadioButton
            android:id="@+id/radio_frag2"
            style="@style/home_radio_button"
            android:drawableTop="@drawable/checker_home_radio_two"
            android:text="@string/home_radio_" />

        <RadioButton
            android:id="@+id/radio_frag3"
            style="@style/home_radio_button"
            android:layout_height="65dp"
            android:background="@drawable/icon_scan" />

        <RadioButton
            android:id="@+id/radio_frag4"
            style="@style/home_radio_button"
            android:drawableTop="@drawable/checker_home_radio_four"
            android:text="@string/home_radio_history" />

        <RadioButton
            android:id="@+id/radio_frag5"
            style="@style/home_radio_button"
            android:drawableTop="@drawable/checker_home_radio_five"
            android:text="@string/home_radio_my" />
    </RadioGroup>
</LinearLayout>
